# paper_delia_2025_iros_physics-informed_trajectory_generation

./: .gitignore  README.md  environment.yml  setup.cfg
config/: config_joypad.toml  config_mann.toml
scripts/: features_extraction.py  play_retargeted_mocap.py  plot_robot_test_data.py  retargeting.py  show_selected_plots.py  training.py  trajectory_generation.py
src/pi_trajectory_generation/data_processing/: features_extractor.py  motion_data_retargeter.py  qpik.toml  utils.py  xsens_data_converter.py
src/pi_trajectory_generation/mann_pytorch/: DataHandler.py  MANN.py
src/pi_trajectory_generation/model/ergoCubGazeboV1_xsens/: ergoCubGazeboV1_xsens.urdf
worlds/: ergocub_world.sdf
