# SPDX-FileCopyrightText: Fondazione Istituto Italiano di Tecnologia
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = pi_trajectory_generation
version = 1.0
description = Physics-informed trajectory generator for humanoid robots.
author = Evelyn D'Elia
author_email = evelyn.delia@iit.com
license = BSD-3-Clause
license_file = LICENSE
url = hhttps://github.com/ami-iit/paper_delia_2024_ral_physics-informed_trajectory_generation

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6

install_requires =
    adam-robotics
    jaxsim
    manifpy
    matplotlib
    numpy
    scipy
    wget
    torch
    tensorboard
    protobuf

[options.packages.find]
where = src
